# ATRI_usb_camera

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ci.yml
config/: camera_info.yaml  usb_camera_config.yaml
include/usb_camera/: usb_camera_node.hpp
launch/: launch.py
rviz/: usb_camera.rviz
src/: usb_camera_node.cpp
